# xmodits-py

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  whl_artifacts.yml
src/: api.rs  error.rs  lib.rs
