[package]
name = "xmodits_py"
authors = ["B0ney - https://github.com/B0ney"]
description = "Extract samples from tracker modules. Supports IT, XM, S3M, MOD, UMX, MPTM"
version = "0.2.1"
edition = "2021"
license = "LGPLv3"
readme = "README.md"
repository = "https://github.com/B0ney/xmodits-py"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xmodits"
crate-type = ["cdylib"]

[dependencies]
xmodits-lib = { git = "https://github.com/B0ney/xmodits-lib", rev = "73d38685e0c0624d16b68f7a285d5c4d2e11f433"}

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module", "abi3-py37", "anyhow"]

[profile.release]
strip = true
opt-level = "s"     
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.